improved coinling movement

--- a/frontend/src/css/overworld.css
+++ b/frontend/src/css/overworld.css
@@ -26,12 +26,26 @@ body {
     animation: rock 0.6s ease-in-out infinite alternate;
 }
 
+.coinling-moving.facing-right {
+    animation: rock-right 0.6s ease-in-out infinite alternate;
+}
+
 @keyframes rock {
     from {
-        transform: rotate(-4deg);
+        transform: scaleX(1) rotate(-4deg);
     }
 
     to {
-        transform: rotate(4deg);
+        transform: scaleX(1) rotate(4deg);
+    }
+}
+
+@keyframes rock-right {
+    from {
+        transform: scaleX(-1) rotate(-4deg);
+    }
+
+    to {
+        transform: scaleX(-1) rotate(4deg);
     }
 }
