--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -78,7 +78,15 @@
 
 .loading-screen {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #4f3fcc;
+  color: white;
+  font-size: 1.5rem;
+  z-index: 9999;
 }
